--- a/EShyMedia.MvvmCross.Plugins.Settings.WindowsPhone/EShyMedia.MvvmCross.Plugins.Settings.WindowsPhone.csproj
+++ b/EShyMedia.MvvmCross.Plugins.Settings.WindowsPhone/EShyMedia.MvvmCross.Plugins.Settings.WindowsPhone.csproj
@@ -23,7 +23,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>Bin\Debug</OutputPath>
+    <OutputPath>..\Debug\Mvx\WindowsPhone\</OutputPath>
     <DefineConstants>DEBUG;TRACE;SILVERLIGHT;WINDOWS_PHONE</DefineConstants>
     <NoStdLib>true</NoStdLib>
     <NoConfig>true</NoConfig>
