--- a/EShyMedia.MvvmCross.Plugins.Settings.WindowsCommon/packages.config
+++ b/EShyMedia.MvvmCross.Plugins.Settings.WindowsCommon/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MvvmCross.HotTuna.CrossCore" version="3.5.0" targetFramework="portable-win81+wpa81" />
-  <package id="MvvmCross.PortableSupport" version="3.5.0" targetFramework="portable-win81+wpa81" />
+  <package id="MvvmCross.Binding" version="4.0.0-beta8" targetFramework="portable46-win81+wpa81" />
+  <package id="MvvmCross.Core" version="4.0.0-beta8" targetFramework="portable46-win81+wpa81" />
+  <package id="MvvmCross.Platform" version="4.0.0-beta8" targetFramework="portable46-win81+wpa81" />
 </packages>
