--- a/nuspec/EShyMedia.MvvmCross.Plugins.Settings.nuspec
+++ b/nuspec/EShyMedia.MvvmCross.Plugins.Settings.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>EShyMedia.MvvmCross.Plugins.Settings</id>
-        <version>1.0.2</version>
+        <version>2.0.0-beta8</version>
         <title>EShyMedia.MvvmCross.Plugins.Settings</title>
         <authors>Ishai Hachlili</authors>
         <owners>Ishai Hachlili</owners>
@@ -10,43 +10,78 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>An MvvmCross settings and secured settings plugin</description>
 		<releaseNotes>
-		1.02 - Fixed issue with Windows Phone settings
+		2.00-beta8 - Updating to MvvmCross 4 beta8
 		</releaseNotes>
         <tags>MvvmCross</tags>
         <dependencies>
-            <dependency id="MvvmCross.HotTuna.CrossCore" version="3.5.0" />
+			<group targetFramework ="net">
+				<dependency id="MvvmCross.Platform" version="4.0.0-beta8" />
+			</group>
+			<group targetFramework ="win">
+				<dependency id="MvvmCross.Platform" version="4.0.0-beta8" />
+			</group>
+			<group targetFramework ="wp">
+				<dependency id="MvvmCross.Platform" version="4.0.0-beta8" />
+			</group>
+			<group targetFramework ="wpa">
+				<dependency id="MvvmCross.Platform" version="4.0.0-beta8" />
+			</group>
+			<group targetFramework ="MonoAndroid">
+				<dependency id="MvvmCross.Platform" version="4.0.0-beta8" />
+			</group>
+			<group targetFramework ="MonoTouch">
+				<dependency id="MvvmCross.Platform" version="4.0.0-beta8" />
+			</group>
+			<group targetFramework ="Xamarin.iOS">
+				<dependency id="MvvmCross.Platform" version="4.0.0-beta8" />
+			</group>
+			<group targetFramework ="portable-net45+win8+wpa81+wp8">
+				<dependency id="MvvmCross.Platform" version="4.0.0-beta8" />
+			</group>
+			<group targetFramework ="uap">
+				<dependency id="MvvmCross.Platform" version="4.0.0-beta8" />
+			</group>
+			<group targetFramework ="dotnet">
+				<dependency id="MvvmCross.Platform" version="4.0.0-beta8" />
+			</group>		
         </dependencies>
     </metadata>
     <files>
+
+	
 		<!-- PCL -->
-        <file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.dll" target="lib\portable-win+net45+wp8+win8+wpa81+MonoTouch+MonoAndroid+Xamarin.iOS\EShyMedia.MvvmCross.Plugins.Settings.dll" />
+        <file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.*" target="lib\portable-win+net45+wp8+win8+wpa81+MonoTouch+MonoAndroid+Xamarin.iOS\EShyMedia.MvvmCross.Plugins.Settings.dll" />
 		<file src="Settings.cs.pp" target="content\portable-win+net45+wp8+win8+wpa81+MonoTouch+MonoAndroid+Xamarin.iOS\Helpers\Settings.cs.pp" />
 
+		<!-- dotnet -->
+		<file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.*" target="lib\dotnet" />
+		
 		<!-- windows common -->
-        <file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.dll" target="lib\win81\EShyMedia.MvvmCross.Plugins.Settings.dll" />
-        <file src="..\Release\Mvx\WindowsCommon\EShyMedia.MvvmCross.Plugins.Settings.WindowsCommon.dll" target="lib\win81\EShyMedia.MvvmCross.Plugins.Settings.WindowsCommon.dll" />
+		<file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.*" target="lib\win81" />
+		<file src="..\Release\Mvx\WindowsCommon\EShyMedia.MvvmCross.Plugins.Settings.WindowsCommon.*" target="lib\win81" />
         <file src="BootstrapContent\SettingsPluginBootstrap.cs.pp" target="content\win81\Bootstrap\SettingsPluginBootstrap.cs.pp" />
 
-        <file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.dll" target="lib\wpa81\EShyMedia.MvvmCross.Plugins.Settings.dll" />
-        <file src="..\Release\Mvx\WindowsCommon\EShyMedia.MvvmCross.Plugins.Settings.WindowsCommon.dll" target="lib\wpa81\EShyMedia.MvvmCross.Plugins.Settings.WindowsCommon.dll" />
+		<file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.*" target="lib\wpa81" />
+		<file src="..\Release\Mvx\WindowsCommon\EShyMedia.MvvmCross.Plugins.Settings.WindowsCommon.*" target="lib\wpa81" />
         <file src="BootstrapContent\SettingsPluginBootstrap.cs.pp" target="content\wpa81\Bootstrap\SettingsPluginBootstrap.cs.pp" />
-
-        <file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.dll" target="lib\portable-win81+wpa81\EShyMedia.MvvmCross.Plugins.Settings.dll" />
-        <file src="..\Release\Mvx\WindowsCommon\EShyMedia.MvvmCross.Plugins.Settings.WindowsCommon.dll" target="lib\portable-win81+wpa81\EShyMedia.MvvmCross.Plugins.Settings.WindowsCommon.dll" />
 		
+		<file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.*" target="lib\portable-win81+wpa81" />
+		<file src="..\Release\Mvx\WindowsCommon\EShyMedia.MvvmCross.Plugins.Settings.WindowsCommon.*" target="lib\portable-win81+wpa81" />
+
 		<!-- phone -->
-        <file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.dll" target="lib\wp8\EShyMedia.MvvmCross.Plugins.Settings.dll" />
-        <file src="..\Release\Mvx\WindowsPhone\EShyMedia.MvvmCross.Plugins.Settings.WindowsPhone.dll" target="lib\wp8\EShyMedia.MvvmCross.Plugins.Settings.WindowsPhone.dll" />
+		<file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.*" target="lib\wp8" />
+		<file src="..\Release\Mvx\WindowsPhone\EShyMedia.MvvmCross.Plugins.Settings.WindowsPhone.*" target="lib\wp8" />
         <file src="BootstrapContent\SettingsPluginBootstrap.cs.pp" target="content\wp8\Bootstrap\SettingsPluginBootstrap.cs.pp" />
 		
 		<!-- droid -->
-        <file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.dll" target="lib\MonoAndroid\EShyMedia.MvvmCross.Plugins.Settings.dll" />
-        <file src="..\Release\Mvx\Droid\EShyMedia.MvvmCross.Plugins.Settings.Droid.dll" target="lib\MonoAndroid\EShyMedia.MvvmCross.Plugins.Settings.Droid.dll" />
+		<file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.*" target="lib\MonoAndroid" />
+		<file src="..\Release\Mvx\Droid\EShyMedia.MvvmCross.Plugins.Settings.Droid.*" target="lib\MonoAndroid" />
         <file src="BootstrapContent\SettingsPluginBootstrap.cs.pp" target="content\MonoAndroid\Bootstrap\SettingsPluginBootstrap.cs.pp" />
 
 		<!-- touch -->
-        <file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.dll" target="lib\Xamarin.iOS\EShyMedia.MvvmCross.Plugins.Settings.dll" />
-        <file src="..\Release\Mvx\Touch\EShyMedia.MvvmCross.Plugins.Settings.Touch.dll" target="lib\Xamarin.iOS\EShyMedia.MvvmCross.Plugins.Settings.Touch.dll" />
-        <file src="TouchBootstrapContent\SettingsPluginBootstrap.cs.pp" target="content\Xamarin.iOS\Bootstrap\SettingsPluginBootstrap.cs.pp" />
+		<file src="...\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.*" target="lib\Xamarin.iOS10" />
+		<file src="...\Release\Mvx\iOS\EShyMedia.MvvmCross.Plugins.Settings.iOS.*" target="lib\Xamarin.iOS10" />
+        <file src="IosBootstrapContent\SettingsPluginBootstrap.cs.pp" target="content\Xamarin.iOS10\Bootstrap\SettingsPluginBootstrap.cs.pp" />
+
     </files>
 </package>
