--- a/nuspec/EShyMedia.MvvmCross.Plugins.Settings.nuspec
+++ b/nuspec/EShyMedia.MvvmCross.Plugins.Settings.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>EShyMedia.MvvmCross.Plugins.Settings</id>
-        <version>2.0.0-beta8</version>
+        <version>2.0.0</version>
         <title>EShyMedia.MvvmCross.Plugins.Settings</title>
         <authors>Ishai Hachlili</authors>
         <owners>Ishai Hachlili</owners>
@@ -10,39 +10,39 @@
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>An MvvmCross settings and secured settings plugin</description>
 		<releaseNotes>
-		2.00-beta8 - Updating to MvvmCross 4 beta8
+		2.00 - Updated to MvvmCross 4.0
 		</releaseNotes>
         <tags>MvvmCross</tags>
         <dependencies>
 			<group targetFramework ="net">
-				<dependency id="MvvmCross.Platform" version="4.0.0-beta8" />
+				<dependency id="MvvmCross.Platform" version="4.0.0" />
 			</group>
 			<group targetFramework ="win">
-				<dependency id="MvvmCross.Platform" version="4.0.0-beta8" />
+				<dependency id="MvvmCross.Platform" version="4.0.0" />
 			</group>
 			<group targetFramework ="wp">
-				<dependency id="MvvmCross.Platform" version="4.0.0-beta8" />
+				<dependency id="MvvmCross.Platform" version="4.0.0" />
 			</group>
 			<group targetFramework ="wpa">
-				<dependency id="MvvmCross.Platform" version="4.0.0-beta8" />
+				<dependency id="MvvmCross.Platform" version="4.0.0" />
 			</group>
 			<group targetFramework ="MonoAndroid">
-				<dependency id="MvvmCross.Platform" version="4.0.0-beta8" />
+				<dependency id="MvvmCross.Platform" version="4.0.0" />
 			</group>
 			<group targetFramework ="MonoTouch">
-				<dependency id="MvvmCross.Platform" version="4.0.0-beta8" />
+				<dependency id="MvvmCross.Platform" version="4.0.0" />
 			</group>
 			<group targetFramework ="Xamarin.iOS">
-				<dependency id="MvvmCross.Platform" version="4.0.0-beta8" />
+				<dependency id="MvvmCross.Platform" version="4.0.0" />
 			</group>
 			<group targetFramework ="portable-net45+win8+wpa81+wp8">
-				<dependency id="MvvmCross.Platform" version="4.0.0-beta8" />
+				<dependency id="MvvmCross.Platform" version="4.0.0" />
 			</group>
 			<group targetFramework ="uap">
-				<dependency id="MvvmCross.Platform" version="4.0.0-beta8" />
+				<dependency id="MvvmCross.Platform" version="4.0.0" />
 			</group>
 			<group targetFramework ="dotnet">
-				<dependency id="MvvmCross.Platform" version="4.0.0-beta8" />
+				<dependency id="MvvmCross.Platform" version="4.0.0" />
 			</group>		
         </dependencies>
     </metadata>
@@ -59,11 +59,11 @@
 		<!-- windows common -->
 		<file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.*" target="lib\win81" />
 		<file src="..\Release\Mvx\WindowsCommon\EShyMedia.MvvmCross.Plugins.Settings.WindowsCommon.*" target="lib\win81" />
-        <file src="BootstrapContent\SettingsPluginBootstrap.cs.pp" target="content\win81\Bootstrap\SettingsPluginBootstrap.cs.pp" />
+    <file src="BootstrapContent\SettingsPluginBootstrap.cs.pp" target="content\win81\Bootstrap\SettingsPluginBootstrap.cs.pp" />
 
 		<file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.*" target="lib\wpa81" />
 		<file src="..\Release\Mvx\WindowsCommon\EShyMedia.MvvmCross.Plugins.Settings.WindowsCommon.*" target="lib\wpa81" />
-        <file src="BootstrapContent\SettingsPluginBootstrap.cs.pp" target="content\wpa81\Bootstrap\SettingsPluginBootstrap.cs.pp" />
+    <file src="BootstrapContent\SettingsPluginBootstrap.cs.pp" target="content\wpa81\Bootstrap\SettingsPluginBootstrap.cs.pp" />
 		
 		<file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.*" target="lib\portable-win81+wpa81" />
 		<file src="..\Release\Mvx\WindowsCommon\EShyMedia.MvvmCross.Plugins.Settings.WindowsCommon.*" target="lib\portable-win81+wpa81" />
@@ -71,7 +71,7 @@
 		<!-- phone -->
 		<file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.*" target="lib\wp8" />
 		<file src="..\Release\Mvx\WindowsPhone\EShyMedia.MvvmCross.Plugins.Settings.WindowsPhone.*" target="lib\wp8" />
-        <file src="BootstrapContent\SettingsPluginBootstrap.cs.pp" target="content\wp8\Bootstrap\SettingsPluginBootstrap.cs.pp" />
+    <file src="BootstrapContent\SettingsPluginBootstrap.cs.pp" target="content\wp8\Bootstrap\SettingsPluginBootstrap.cs.pp" />
 		
 		<!-- droid -->
 		<file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.*" target="lib\MonoAndroid" />
@@ -79,8 +79,8 @@
         <file src="BootstrapContent\SettingsPluginBootstrap.cs.pp" target="content\MonoAndroid\Bootstrap\SettingsPluginBootstrap.cs.pp" />
 
 		<!-- touch -->
-		<file src="...\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.*" target="lib\Xamarin.iOS10" />
-		<file src="...\Release\Mvx\iOS\EShyMedia.MvvmCross.Plugins.Settings.iOS.*" target="lib\Xamarin.iOS10" />
+		<file src="..\Release\Mvx\Portable\EShyMedia.MvvmCross.Plugins.Settings.*" target="lib\Xamarin.iOS" />
+		<file src="..\Release\Mvx\iOS\EShyMedia.MvvmCross.Plugins.Settings.iOS.*" target="lib\Xamarin.iOS" />
         <file src="IosBootstrapContent\SettingsPluginBootstrap.cs.pp" target="content\Xamarin.iOS10\Bootstrap\SettingsPluginBootstrap.cs.pp" />
 
     </files>
