--- a/EShyMedia.MvvmCross.Plugins.Settings.WindowsCommon/EShyMedia.MvvmCross.Plugins.Settings.WindowsCommon.csproj
+++ b/EShyMedia.MvvmCross.Plugins.Settings.WindowsCommon/EShyMedia.MvvmCross.Plugins.Settings.WindowsCommon.csproj
@@ -38,6 +38,9 @@
     <TargetPlatform Include="Windows, Version=8.1" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\CommonAssemblyInfo.cs">
+      <Link>CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Plugin.cs" />
     <Compile Include="MvxWindowsCommonSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
