--- a/EShyMedia.MvvmCross.Plugins.Settings.iOS/EShyMedia.MvvmCross.Plugins.Settings.iOS.csproj
+++ b/EShyMedia.MvvmCross.Plugins.Settings.iOS/EShyMedia.MvvmCross.Plugins.Settings.iOS.csproj
@@ -34,6 +34,9 @@
     <CodesignKey>iPhone Developer</CodesignKey>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\CommonAssemblyInfo.cs">
+      <Link>CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Plugin.cs" />
     <Compile Include="MvxIosSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
