--- a/EShyMedia.MvvmCross.Plugins.Settings/EShyMedia.MvvmCross.Plugins.Settings.csproj
+++ b/EShyMedia.MvvmCross.Plugins.Settings/EShyMedia.MvvmCross.Plugins.Settings.csproj
@@ -34,6 +34,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="..\CommonAssemblyInfo.cs">
+      <Link>CommonAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="PluginLoader.cs" />
     <Compile Include="ISettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
